passing tests on paged collectin retrieval.